# PyGCL

./: .gitignore  .readthedocs.yml  README.md  config.yaml  exp.py  setup.cfg  test_example.py  train.py  train_config.py  train_graph_BGRL_g2g.py  train_graph_BGRL_g2l.py  train_graph_BGRL_l2l.py  train_graph_g2g.py  train_graph_g2l.py  train_graph_g2l_shared.py  train_graph_l2l.py  train_molhiv_g2g.py  train_molhiv_g2l.py  train_molhiv_l2l.py  train_node_BGRL.py  train_node_BGRL_g2l.py  train_node_BGRL_l2l.py  train_node_BGRL_l2l_norm.py  train_node_g2l.py  train_node_l2l.py  train_pcqm4m_g2g.py  train_pcqm4m_g2l.py  train_pcqm4m_l2l.py  train_qm9_l2l.py  train_qm9_nn_conv.py  train_qm9_schnet.py  trial.py  utils.py
.github/workflows/: documentation.yml  linting.yml  publish-pypi.yml  testing.yml
GCL/: ContrastModel.py  __init__.py  conmodel.py  eval.py  loss.py  utils.py
GCL/augmentations/: GraphAug.py  __init__.py  edge_adding.py  functional.py  (+11 more)
GPUBurner/: job.py  worker.py  workhouse.py
HC/: config_loader.py
docs/: conf.py  index.md  index.rst  requirements.txt  requirements_basic.txt  requirements_docs.txt  run_livereload.py
examples/: BGRL_G2L.py  BGRL_L2L.py  DGI.py  DGI_inductive.py  DGI_transductive.py  GBT.py  GCA.py  GRACE.py  GRACE_SupCon.py  GraphCL.py  InfoGraph.py  MVGRL_graph.py  MVGRL_node.py  PGCL.py
happy_config/: __init__.py
models/: BGRL.py  G2G.py  G2L.py  GConv.py  GRACE.py  L2L.py  MVGRL.py
test/: requirements_test.txt  test_augmentor.py  testing_utils.py
tests/: test_encoder.py  test_hypothesis.py  test_losses.py  testutils.py
(+184 files in other folders)
