[metadata]
name = PyGCL
version = 0.1.2
author = Yanqiao Zhu
author_email = i@sxkdz.me
description = PyGCL: Graph Contrastive Learning for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GraphCL/PyGCL
project_urls =
    Bug Tracker = https://github.com/GraphCL/PyGCL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    PyTorch
    Graph-Neural-Networks
    Graph-Contrastive-Learning

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    torch >= 1.9
    torch-geometric >= 1.7
    numpy
    tqdm
    scipy
    networkx
    scikit-learn

[options.packages.find]
where = .
